# scaffld

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  PLAN.md  README.md  SECURITY_REVIEW.md  pyproject.toml
.github/workflows/: ci.yml
src/scaffld/: __init__.py  __main__.py  cli.py  console.py  errors.py  generator.py  hooks.py  manifest.py  render.py  resolver.py  variables.py
src/scaffld/templates/cli-app/: scaffld.yaml
src/scaffld/templates/cli-app/template/: README.md.jinja  pyproject.toml.jinja
src/scaffld/templates/cli-app/template/src/{{ package_name }}/: __init__.py.jinja  cli.py.jinja
src/scaffld/templates/cli-app/template/tests/: test_cli.py.jinja
src/scaffld/templates/python-package/: scaffld.yaml
src/scaffld/templates/python-package/template/: LICENSE.jinja  README.md.jinja  pyproject.toml.jinja
src/scaffld/templates/python-package/template/.github/workflows/: ci.yml.jinja
src/scaffld/templates/python-package/template/src/{{ package_name }}/: __init__.py.jinja  cli.py.jinja  core.py.jinja
src/scaffld/templates/python-package/template/tests/: test_core.py.jinja
src/scaffld/templates/static-site/: scaffld.yaml
src/scaffld/templates/static-site/template/: README.md.jinja  index.html.jinja  style.css.jinja
src/scaffld/templates/static-site/template/.github/workflows/: pages.yml.jinja
tests/: conftest.py  test_builtin_templates.py  test_cli.py  test_generator.py  test_hooks.py  test_manifest.py  test_render.py  test_resolver.py  test_security.py  test_variables.py
